Make the script copy the README.md as index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,29 @@
-See https://github.com/alcuadrado/vyper-releases-mirror
+# Vyper releases mirror
+
+This repository has a mirror of the [Vyper releases page](https://github.com/vyperlang/vyper/releases).
+
+Please, don't use this mirror directly from GitHub. Use its website instead.
+
+## Structure of the mirror
+
+1. The mirror serves the `public/` folder.
+2. It has a `list.json` file in its root, which is a simplified version of a the response of [this API call](https://api.github.com/repos/vyperlang/vyper/releases?per_page=200).
+3. Each of the assets listed in `list.json` has been downloaded into the root of the mirror.
+
+## `list.json` format
+
+The type of `list.json` is `CompilerList` in the following snippet:
+
+```ts
+type CompilersList = CompilerRelease[];
+
+interface CompilerReleaseAsset {
+  name: string;
+  browser_download_url: string;
+}
+
+interface CompilerRelease {
+  assets: CompilerReleaseAsset[];
+  tag_name: string;
+}
+```
