Fix formatting of the index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-# Vyper releases mirror
+<pre># Vyper releases mirror
 
 This is a mirror of the [Vyper releases page](https://github.com/vyperlang/vyper/releases).
 
@@ -28,3 +28,4 @@ interface CompilerRelease {
   tag_name: string;
 }
 ```
+</pre>
